@@ -4,12 +4,14 @@ DIST gentoo-ru-0.06.gz 20408 RMD160 25e63f0f232cdbfff372d0f2aa555147e83be1ae SHA
 DIST gentoo-ru-0.07.gz 23943 RMD160 164e830daf6e3bc316404c391c8507e8acd3f87c SHA1 57fffb9aa015f133fa073570b338d403032f86b7 SHA256 0b5181c3be8fdc2e42014ef90cbbbe46cffd707e944d09a97ff7c858eddb46b8
 DIST gentoo-ru-0.08.gz 27352 RMD160 28e9562f78c6fba91e425b50ada2c0ac44e97dd6 SHA1 7b54c31d34c958f6e89ff980546d87e26f63e57a SHA256 0cc075059ce3ce5dd94f6a1f8e8f72bf69c9308621269e7a020510412d32b041
 DIST gentoo-ru-0.09.gz 30483 RMD160 f16a263b8d8ebac8e5d6dbadb4aa4271e4138fdb SHA1 636c104b45d76e1b58bfae97124c90425b0826e6 SHA256 e3eb098580777bfdf10bd23991756887c4e6cd92ed000cddf9e6e0e1c6df12b9
+DIST gentoo-ru-0.10.gz 33801 RMD160 072b0ae9d26f2e187746e4af44fadddcb782b597 SHA1 79b259c22ecac80c31671214872480dcb28f2f8c SHA256 541245b9cf72164ce5ed0804a4ef8ca17c69b57a55fb19df2e0c8241779daecc
 EBUILD fortune-mod-gentoo-ru-0.04.ebuild 776 RMD160 4b14d48600c645c71301409538d4b8f27b3efbe6 SHA1 ade50495bd31ce4963a333efd3708e141a1416c7 SHA256 0e9dd967f978ff546bdba8706eeba4f01a0395279f86611cd27790ce55a62f5f
 EBUILD fortune-mod-gentoo-ru-0.05.ebuild 776 RMD160 4b14d48600c645c71301409538d4b8f27b3efbe6 SHA1 ade50495bd31ce4963a333efd3708e141a1416c7 SHA256 0e9dd967f978ff546bdba8706eeba4f01a0395279f86611cd27790ce55a62f5f
 EBUILD fortune-mod-gentoo-ru-0.06.ebuild 776 RMD160 4b14d48600c645c71301409538d4b8f27b3efbe6 SHA1 ade50495bd31ce4963a333efd3708e141a1416c7 SHA256 0e9dd967f978ff546bdba8706eeba4f01a0395279f86611cd27790ce55a62f5f
 EBUILD fortune-mod-gentoo-ru-0.07.ebuild 776 RMD160 4b14d48600c645c71301409538d4b8f27b3efbe6 SHA1 ade50495bd31ce4963a333efd3708e141a1416c7 SHA256 0e9dd967f978ff546bdba8706eeba4f01a0395279f86611cd27790ce55a62f5f
 EBUILD fortune-mod-gentoo-ru-0.08.ebuild 776 RMD160 4b14d48600c645c71301409538d4b8f27b3efbe6 SHA1 ade50495bd31ce4963a333efd3708e141a1416c7 SHA256 0e9dd967f978ff546bdba8706eeba4f01a0395279f86611cd27790ce55a62f5f
 EBUILD fortune-mod-gentoo-ru-0.09.ebuild 776 RMD160 4b14d48600c645c71301409538d4b8f27b3efbe6 SHA1 ade50495bd31ce4963a333efd3708e141a1416c7 SHA256 0e9dd967f978ff546bdba8706eeba4f01a0395279f86611cd27790ce55a62f5f
+EBUILD fortune-mod-gentoo-ru-0.10.ebuild 776 RMD160 4b14d48600c645c71301409538d4b8f27b3efbe6 SHA1 ade50495bd31ce4963a333efd3708e141a1416c7 SHA256 0e9dd967f978ff546bdba8706eeba4f01a0395279f86611cd27790ce55a62f5f
 EBUILD fortune-mod-gentoo-ru-9999.ebuild 637 RMD160 45bc00345eb1454a4092370d5b5818d13c4288eb SHA1 cbb8f3f113f14ee05186ea8c1f01c5b336e0817a SHA256 d29f3a08b1967811abacdf7b390da8863eee2f3d19570b5b21068d753554b099
-MISC ChangeLog 1533 RMD160 32c3fdf7018b21c3f099fc789e9d7119f9760e06 SHA1 3f1f9be08b536388fa902f7553d0fcc90f9e61c2 SHA256 82813fdf3e2bbb9ef6b4ee9a857b29f4220e2f6cae4ef7b7a00a134713e2455b
+MISC ChangeLog 1640 RMD160 3bcf81f5ac2b17a4fdf92177f6e7ce9e3b1b7a84 SHA1 57d6cbce5fe6ff4245aa7f688bed3a2e7d8aa514 SHA256 b9d6a2866edb9cd74b30cd3ec6a7e45853319fe8ea440be36c8ce3762e7bc7c8
 MISC metadata.xml 496 RMD160 20c1d96bc38fa9aa28ac23001c49f2e2cd59b0aa SHA1 475087d0baeff56b3c73066e51a947cf7dfbf4c5 SHA256 7e60b43f4827cd5e132de66d29cd94ca009ab5b3bf22b3279bdbcb12f57dd546
