@@ -1,6 +1,10 @@
 # ChangeLog for games-misc/fortune-mod-gentoo-ru
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  16 Jan 2010; A. Vinogradov <spamslepnoga@inbox.ru>
+  +fortune-mod-gentoo-ru-0.10.ebuild:
+  version bump
 
   25 Nov 2009; A. Vinogradov <spamslepnoga@inbox.ru>
   +fortune-mod-gentoo-ru-0.09.ebuild:
